--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
-<h2>Sign up</h2>
+<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+<div class='form-wrap'>
+  <div class='form-header'>
+    <h1 class='form-header-text'>
+      アカウント情報入力
+    </h1>
+  </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="form_group">
+    <div class="form_text_wrap">
+      <label class="form_text">ニックネーム</label>
+      <span class="required">必須</span>
+    </div>
+    <%= f.text_area :nickname, class:"input_default", id:"nickname", placeholder:"例) 太郎 ", maxlength:"15", autofocus: true %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="form_group">
+    <div class='form_text_wrap'>
+      <label class="form_text">メールアドレス</label>
+      <span class="required">必須</span>
+    </div>
+    <%= f.email_field :email, class:"input_default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form_group">
+    <div class='form_text_wrap'>
+      <label class="form_text">パスワード</label>
+      <span class="required">必須</span>
+    </div>
+    <%= f.password_field :password, class:"input_default", id:"password", placeholder:"6文字以上の半角英数字" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form_group">
+    <div class='form_text_wrap'>
+      <label class="form_text">パスワード(確認)</label>
+      <span class="required">必須</span>
+    </div>
+    <%= f.password_field :password_confirmation, class:"input_default", id:"password_confirmation", placeholder:"同じパスワードを入力して下さい" %>
   </div>
+
+  <div class="register_btn">
+    <%= f.submit "アカウント登録" %>
+  </div>
+</div>
 <% end %>
 
 <%= render "devise/shared/links" %>
