アプリ説明修正

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -21,7 +21,7 @@
     <div class="description">
       <span style="color: red; font-weight: 700;">アイテムリストの管理</span><br>必要な防災グッズを一元管理し、簡単に確認できるリストを作成します。<br>食料品、衣類、医薬品など、日常生活に必要なものを含め、災害時に必要なアイテムを把握できます。<br><br>
       <span style="color: red; font-weight: 700;">賞味期限の管理</span><br>食料品や医薬品の期限を把握し、定期的なチェックを促します。<br>期限が切れそうなものは通知され、期限切れを防ぐことができます。<br><br>
-      <span style="color: red; font-weight: 700;">家族との共有</span><br>家族とリストを共有し、期限や保管場所の把握<br><br><br>
+      <span style="color: red; font-weight: 700;">リストの共有</span><br>家族とリストを共有し、期限や保管場所の把握をすることができます。<br>家族全体での防災対策への意識の向上に繋がります。<br><br>
       <span style="color: red; font-weight: 700;">日常生活でのアプリの使用</span><br>防災グッズの管理だけでなく、普段の生活用品の管理にも使用することができます。<br>日用品をリスト管理することでフードロスの削減や買い物時の手助けにもなります。
     </div>
   </div>
