--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -14,7 +14,7 @@
 
   <div class="field">
     <%= f.label :selected_icon, 'Select Icon' %>
-    <%= f.select :selected_icon, List::ICONS, { prompt: 'Choose an icon' } %>
+    <%= f.select :selected_icon, List::ICONS, { prompt: 'Choose an icon' }, class: 'select2' %>
   </div>
 
   <div class="actions">
