リスト一覧表示機能実装

--- a/app/assets/stylesheets/lists/index.css
+++ b/app/assets/stylesheets/lists/index.css
@@ -1,3 +1,12 @@
+/* ログイン時 */
+
+.list_img {
+  height: 100px;
+  
+}
+
+/* ログアウト時 */
+
 .toppage_wrap {
   display: flex;
   flex-direction: column;
