--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,16 +2,16 @@
 
 
 <% if user_signed_in? %>
-  <%= link_to 'リスト登録', new_list_path, class: "list_btn" %>
-  
-  <% current_user.lists.each do |list| %>
-    <div class='list'>
+  <%= link_to "リスト登録", new_list_path, class: "list_edit_btn" %>
+  <%= link_to "全登録アイテム一覧", items_path, class: "all_item_list" %>
+  <% @user_lists.each do |list| %>
+    <div class="list">
       <%= link_to list_path(list.id) do %>
-        <div class='list_img_content'>
+        <div class="list_img_content">
           <%= image_tag list.image, class: "list_img" %>
         </div>
-        <div class='list_info'>
-          <h3 class='list_name'>
+        <div class="list_info">
+          <h3 class="list_name">
             <%= list.list_name %>
           </h3>
         </div>
