アイテム登録画面作成(購入日までの途中)

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <% if user_signed_in? %>
-  <%= link_to "リスト登録", new_list_path, class: "list_edit_btn" %>
+  <%= link_to "リスト登録", new_list_path, class: "list_new_btn" %>
   <%= link_to "全登録アイテム一覧", items_path, class: "all_item_list" %>
   <% @user_lists.each do |list| %>
     <div class="list">
