--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -10,7 +10,7 @@
       <p>
         クリックしてファイルをアップロード
       </p>
-      <%= f.file_field :image, id:"item-image" %>
+      <%= f.file_field :image, id:"list-image" %>
     </div>
   </div>
 
