--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -50,6 +50,12 @@
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
   </div>
 
+  <div class="weight-bold-text">
+    期限
+    <span class="required">必須</span>
+  </div>
+  <%= f.collection_select(:expiration_id, Expiration.all, :id, :name, {}, {class:"expiration_select"}) %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
