--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -18,18 +18,18 @@
     アイテム名
     <span class="required">必須</span>
   </div>
-  <%= f.text_area :item_name, class:"item_name", id:"item_name", placeholder:"アイテム名" %>
+  <%= f.text_field :item_name, class:"item_name", id:"item_name", placeholder:"アイテム名" %>
 
   <div class="weight-bold-text">
     ストック数
     <span class="required">必須</span>
   </div>
-  <%= f.text_area :stock_count, class:"stock_count", id:"stock_count", placeholder:"例:5個 1袋 など" %>
+  <%= f.text_field :stock_count, class:"stock_count", id:"stock_count", placeholder:"例:5個 1袋 など" %>
 
   <div class="weight-bold-text">
     保管場所
   </div>
-  <%= f.text_area :stock_place, class:"stock_place", id:"stock_place", placeholder:"例:冷蔵庫 玄関収納 など" %>
+  <%= f.text_field :stock_place, class:"stock_place", id:"stock_place", placeholder:"例:冷蔵庫 玄関収納 など" %>
 
   <div class="weight-bold-text">
     購入日、登録日
@@ -51,11 +51,50 @@
   </div>
 
   <div class="weight-bold-text">
-    期限
+    期限の種類
     <span class="required">必須</span>
   </div>
   <%= f.collection_select(:expiration_id, Expiration.all, :id, :name, {}, {class:"expiration_select"}) %>
 
+  <div class="weight-bold-text">
+    期限日
+  </div>
+  <div class='input_expiration_date'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :expiration_date,
+                    class:'expiration_date',
+                    id:"expiration_date",
+                    use_month_numbers: true,
+                    prompt: "--",
+                    start_year: (Time.now.year - 10),
+                    end_year: (Time.now.year + 10),
+                    date_separator: '%s',
+                    selected: Date.current
+                    ),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+  </div>
+
+  <div class="weight-bold-text">
+    <%= f.check_box :purchase_plan, class:"purchase_plan", id:"purchase_plan" %>
+    購入予定(選択すると購入予定リストへ追加される)
+  </div>
+
+  <div class="weight-bold-text">
+    購入予定数
+  </div>
+  <%= f.text_field :purchase_plan_count, class:"purchase_plan_count", id:"purchase_plan_count", placeholder:"例:5個 1袋 など" %>
+
+  <div class="weight-bold-text">
+    URL
+  </div>
+  <%= f.text_area :url, class:"url", id:"url", placeholder:"保存しておきたいページのURL" %>
+  
+  <div class="weight-bold-text">
+    メモ
+  </div>
+  <%= f.text_field :url, class:"url", id:"url", placeholder:"メモ" %>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
