--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -93,7 +93,7 @@
   <div class="weight-bold-text">
     メモ
   </div>
-  <%= f.text_field :url, class:"url", id:"url", placeholder:"メモ" %>
+  <%= f.text_field :memo, class:"memo", id:"memo", placeholder:"メモ" %>
   
   <div class="actions">
     <%= f.submit %>
