--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
 
-<%= form_with(model: @item, local: true) do |f| %>
+<%= form_with(model: [@list, @item], local: true) do |f| %>
 
  <div class="img-upload">
     <div class="weight-bold-text">
