--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,5 +4,11 @@
 
 <% @items.each do |item| %>
   <p><%= item.item_name %></p>
-  <!-- 他のアイテムの情報も表示する場合はここに追加 -->
+  <div class='list_img_content'>
+    <% if item.image.attached? %>
+      <%= image_tag item.image, class: "item_img" %>
+    <% else %>
+      <%= image_tag "noimage.jpg", class: "item_img", alt: "No Image" %>
+    <% end %>
+  </div>
 <% end %>
