アイテム表示デザイン

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -67,7 +67,7 @@
                     id:"expiration_date",
                     use_month_numbers: true,
                     prompt: "--",
-                    start_year: (Time.now.year - 10),
+                    start_year: (Time.now.year ),
                     end_year: (Time.now.year + 10),
                     date_separator: '%s',
                     ),
