--- a/app/assets/stylesheets/lists/show.css
+++ b/app/assets/stylesheets/lists/show.css
@@ -22,6 +22,7 @@
   justify-content: space-around;
   margin-top: 30px;
   border-radius: 10px;
+  font-weight: 700;
 }
 
 .list_content {
@@ -56,6 +57,7 @@
   width: 200px;
   text-decoration: none;
   font-size: 30px;
+  font-weight: 700;
   margin: 0 25px;
   background-color: white;
   color: black;
@@ -70,6 +72,7 @@
   width: 200px;
   text-decoration: none;
   font-size: 30px;
+  font-weight: 700;
   margin-top: 30px;
   background-color: white;
   background-color: red;
@@ -77,19 +80,37 @@
   border-radius: 10px;
 }
 
-.items_container {
+.items_wrap {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  background-color: aqua;
-}
-
-.item_row {
-  display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .item {
-  flex: 1;
+  width: calc((100% - 400px) / 2);
+  margin: 20px 20px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border-radius: 10px;
 }
+
+.item_img_content {
+  width: 150px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+}
+
+.item_img {
+  max-width: 150px;
+}
+
+.item_info {
+  margin-left: 10px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
 
