--- a/app/assets/stylesheets/lists/show.css
+++ b/app/assets/stylesheets/lists/show.css
@@ -53,7 +53,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 50px;
   width: 200px;
   text-decoration: none;
   font-size: 30px;
@@ -68,12 +68,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 50px;
   width: 200px;
   text-decoration: none;
   font-size: 30px;
   font-weight: 700;
-  margin-top: 30px;
+  margin: 30px 0;
   background-color: white;
   background-color: red;
   color: yellow;
