トップページのリスト一覧表示編集

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -18,7 +18,7 @@
     アイテム名
     <span class="required">必須</span>
   </div>
-  <%= f.text_field :item_name, class:"item_name", id:"item_name", placeholder:"アイテム名" %>
+  <%= f.text_field :item_name, class:"item_name", id:"item_name", placeholder:"アイテム名", maxlength:"10" %>
 
   <div class="weight-bold-text">
     ストック数
