--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -19,7 +19,7 @@
     <span class="required">必須</span>
     リスト例：食料品、日用品、子供用品、知識関係(心臓マッサージ、喉に詰まらせた、熱痙攣)など
   </div>
-  <%= f.text_area :list_name, class:"list_name", id:"list_name", placeholder:"リスト名（必須 20文字まで)", maxlength:"20" %>
+  <%= f.text_area :list_name, class:"list_name", id:"list_name", placeholder:"リスト名（10文字まで)", maxlength:"10" %>
   
   <div class="weight-bold-text">
     パスワード
