--- a/app/assets/stylesheets/lists/index.css
+++ b/app/assets/stylesheets/lists/index.css
@@ -1,5 +1,108 @@
 /* ログイン時 */
 
+.background {
+  background-color: lavender;
+  min-height: calc(100vh - 100px);
+}
+.top_page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.list_new_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 200px;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 700;
+  margin: 30px 0;
+  background-color: red;
+  color: yellow;
+  border-radius: 10px;
+}
+
+.all_item_list_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 300px;
+  text-decoration: none;
+  font-size: 35px;
+  font-weight: 700;
+  margin: 0 25px;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+}
+
+.list_index_wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.list_index {
+  width: calc((100% - 400px) / 2);
+  height: 150px;
+  min-width: 500px;
+  margin: 20px 20px;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.list_link {
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+}
+
+.list {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+
+
+.list_info {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.list_img_content {
+  width: 150px;
+  height: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.list_img_index {
+  max-height: 120px;
+  max-width: 150px;
+  border-radius: 10px;
+}
+
+.list_content_index {
+  width: 300px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.list_name_index {
+  font-size: 50px;
+}
 /* ログアウト時 */
 
 .toppage_wrap {
