--- a/app/assets/stylesheets/lists/show.css
+++ b/app/assets/stylesheets/lists/show.css
@@ -1,5 +1,4 @@
 .list_show {
-  background-color: lavender;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,7 +28,7 @@
   width: 350px;
 }
 
-.list_img {
+.list_img_show {
   border-radius: 10px;
 }
 
@@ -74,7 +73,6 @@
   font-size: 30px;
   font-weight: 700;
   margin: 30px 0;
-  background-color: white;
   background-color: red;
   color: yellow;
   border-radius: 10px;
@@ -103,10 +101,12 @@
   height: 150px;
   display: flex;
   justify-content: center;
+  margin-left: 20px;
 }
 
 .item_img {
   max-width: 150px;
+  border-radius: 10px;
 }
 
 .item_info {
