--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,24 +2,34 @@
 
 
 <% if user_signed_in? %>
-  <%= link_to "リスト登録", new_list_path, class: "list_new_btn" %>
-  <%= link_to "全登録アイテム一覧", user_path(current_user), class: "all_item_list" %>
-  <% current_user.lists.each do |list| %>
-    <div class="list">
-      <%= link_to list_path(list.id) do %>
-        <% if list.image.attached? %>
-          <%= image_tag list.image.variant(resize: '150x150'), class: "list_img" %>
-        <% else %>
-          <%= image_tag "noimage.jpg", class: "list_img", alt: "No Image",style: "width: 150px; height: 150px;" %>
+  <div class="background">
+    <div class= "top_page">
+      <%= link_to "リスト登録", new_list_path, class: "list_new_btn" %>
+      <%= link_to "全アイテムリスト", user_path(current_user), class: "all_item_list_btn" %>
+      <div class="list_index_wrap">
+        <% current_user.lists.each do |list| %>
+          <div class="list_index">
+            <%= link_to list_path(list.id),class: "list_link" do %>
+              <div class="list">
+                <div class='list_img_content'>
+                  <% if list.image.attached? %>
+                    <%= image_tag list.image.variant(resize: '150x150'), class: "list_img_index" %>
+                  <% else %>
+                    <%= image_tag "noimage.jpg", class: "list_img_index", alt: "No Image",style: "width: 150px; height: 150px;" %>
+                  <% end %>
+                </div>
+                <div class="list_content_index">
+                  <div class="list_name_index">
+                    <%= list.list_name %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          </div>
         <% end %>
-        <div class="list_info">
-          <h3 class="list_name">
-            <%= list.list_name %>
-          </h3>
-        </div>
-      <% end %>
+      </div>
     </div>
-  <% end %>
+  </div>
 <% else %>
   <div class="toppage_wrap">
     <div class="catch_copy_wrap">
