--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,82 +1,84 @@
 <%= render "shared/header" %>
 
-<div class='list_show'>
-  <div class='list_info_wrap'>
-    <div class="list_info_show">
-      <div class='list_img_content'>
-        <% if @list.image.attached? %>
-          <%= image_tag @list.image.variant(resize: '200x200'), class: "list_img" %>
-        <% else %>
-          <%= image_tag "noimage.jpg", class: "list_img", alt: "No Image",style: "width: 200px; height: 200px;" %>
-        <% end %>
-      </div>
-      <div class= "list_content">
-        <div class='list_name_show'>
-          <%= @list.list_name %>
+<div class="background">
+  <div class='list_show'>
+    <div class='list_info_wrap'>
+      <div class="list_info_show">
+        <div class='list_img_content'>
+          <% if @list.image.attached? %>
+            <%= image_tag @list.image.variant(resize: '200x200'), class: "list_img_show" %>
+          <% else %>
+            <%= image_tag "noimage.jpg", class: "list_img_show", alt: "No Image",style: "width: 200px; height: 200px;" %>
+          <% end %>
         </div>
-        <p class="item_count">
-          登録アイテム数
-          <%= @items.count %>
-        </p>
+        <div class= "list_content_show">
+          <div class='list_name_show'>
+            <%= @list.list_name %>
+          </div>
+          <p class="item_count">
+            登録アイテム数
+            <%= @items.count %>
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="list_btn_wrap">
-    <%= link_to "リストの編集", edit_list_path(@list.id), method: :get, class: "list_option_btn" %>
-    <%= link_to 'リストの削除', list_path(@list.id), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "list_option_btn" %>
-    <%= link_to "リストの共有", root_path , class: "list_option_btn"%>
-  </div>
+    <div class="list_btn_wrap">
+      <%= link_to "リストの編集", edit_list_path(@list.id), method: :get, class: "list_option_btn" %>
+      <%= link_to 'リストの削除', list_path(@list.id), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？" }, class: "list_option_btn" %>
+      <%= link_to "リストの共有", root_path , class: "list_option_btn"%>
+    </div>
 
-  <%= link_to "アイテム登録", new_list_item_path(list_id: @list.id), class: "item_new_btn" %>
+    <%= link_to "アイテム登録", new_list_item_path(list_id: @list.id), class: "item_new_btn" %>
 
-  <div class="items_wrap">
-    <% @items.each do |item| %>
-      <div class="item">
-        <div class='item_img_content'>
-          <% if item.image.attached? %>
-            <%= image_tag item.image.variant(resize: '150x150'), class: "item_img" %>
-          <% else %>
-            <%= image_tag "noimage.jpg", class: "item_img", alt: "No Image",style: "width: 150px; height: 150px;" %>
-          <% end %>
-        </div>
-        <div class="item_info">
-          <div class="item_name_info">
-            <%= item.item_name %>
-          </div>
-          <div class="stock_count_info">
-            ストック数:
-            <%= item.stock_count %>
-          </div>
-          <% if item.memo.present? %>
-            <div class="stock_place_info">
-              保管場所:
-              <%= item.stock_place %>
-            </div>
-          <% end %>
-          <div class="purchase_date_info">
-            <%= item.purchase.name %>:
-            <%= item.purchase_date %>
-          </div>
-          <div class="expiration_date_info">
-            <%= item.expiration.name %>
-            <% if item.expiration_date.present? %>
-            :
+    <div class="items_wrap">
+      <% @items.each do |item| %>
+        <div class="item">
+          <div class='item_img_content'>
+            <% if item.image.attached? %>
+              <%= image_tag item.image.variant(resize: '150x150'), class: "item_img" %>
+            <% else %>
+              <%= image_tag "noimage.jpg", class: "item_img", alt: "No Image",style: "width: 150px; height: 150px;" %>
             <% end %>
-            <%= item.expiration_date %>
           </div>
-          <% if item.memo.present? %>
-            <div class="memo_info">
-              メモ:
-              <%= item.memo %>
+          <div class="item_info">
+            <div class="item_name_info">
+              <%= item.item_name %>
             </div>
-          <% end %>
-          <% if item.url.present? %>
-            <div class="url_info">
-              <%= link_to '保存しているURLページへ', item.url, target: '_blank', class: 'item_url_btn' %>
+            <div class="stock_count_info">
+              ストック数:
+              <%= item.stock_count %>
             </div>
-          <% end %>
+            <% if item.memo.present? %>
+              <div class="stock_place_info">
+                保管場所:
+                <%= item.stock_place %>
+              </div>
+            <% end %>
+            <div class="purchase_date_info">
+              <%= item.purchase.name %>:
+              <%= item.purchase_date %>
+            </div>
+            <div class="expiration_date_info">
+              <%= item.expiration.name %>
+              <% if item.expiration_date.present? %>
+              :
+              <% end %>
+              <%= item.expiration_date %>
+            </div>
+            <% if item.memo.present? %>
+              <div class="memo_info">
+                メモ:
+                <%= item.memo %>
+              </div>
+            <% end %>
+            <% if item.url.present? %>
+              <div class="url_info">
+                <%= link_to '保存しているURLページへ', item.url, target: '_blank', class: 'item_url_btn' %>
+              </div>
+            <% end %>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
