登録画面デザイン作成

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,100 +1,106 @@
 <%= render "shared/header" %>
 
-<%= form_with(model: [@list, @item], local: true) do |f| %>
-
- <div class="img-upload">
-    <div class="weight-bold-text">
-      アイテム画像
+<div class="background_item_new">
+  <%= form_with(model: [@list, @item], class: 'registration_main', local: true) do |f| %>
+    <div class="form_header">
+      アイテム登録
     </div>
-    <div class="click-upload">
-      <p>
-        クリックしてファイルをアップロード
-      </p>
-      <%= f.file_field :image, id:"item-image" %>
+    <div class="form_wrap">
+      <div class="img_upload">
+        <div class="form_text">
+          アイテム画像
+        </div>
+        <div class="click-upload">
+          <div>
+            クリックしてファイルをアップロード
+          </div>
+          <%= f.file_field :image, id:"item-image" %>
+        </div>
+      </div>
+
+      <div class="form_text">
+        アイテム名
+        <span class="required">必須</span>
+      </div>
+      <%= f.text_field :item_name, class:"item_name", id:"item_name", placeholder:"アイテム名", maxlength:"10" %>
+
+      <div class="form_text">
+        ストック数
+        <span class="required">必須</span>
+      </div>
+      <%= f.text_field :stock_count, class:"stock_count", id:"stock_count", placeholder:"例:5個 1袋 など" %>
+
+      <div class="form_text">
+        保管場所
+      </div>
+      <%= f.text_field :stock_place, class:"stock_place", id:"stock_place", placeholder:"例:冷蔵庫 玄関収納 など" %>
+
+      <div class="form_text">
+        購入日or登録日
+        <span class="required">必須</span>
+      </div>
+      <%= f.collection_select(:purchase_id, Purchase.all, :id, :name, {}, {class:"purchase_select"}) %>
+
+      <div class='day_date'>
+          <%= raw sprintf(
+                      f.date_select(
+                        :purchase_date,
+                        class:'purchase_date',
+                        id:"purchase_date",
+                        use_month_numbers: true,
+                        prompt: "--",
+                        start_year: (Time.now.year - 10),
+                        end_year: (Time.now.year + 10),
+                        date_separator: '%s',
+                        selected: Date.current
+                        ),
+                      "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+      </div>
+
+      <div class="form_text">
+        期限の種類
+        <span class="required">必須</span>
+      </div>
+      <%= f.collection_select(:expiration_id, Expiration.all, :id, :name, {}, {class:"expiration_select"}) %>
+
+      <div class='day_date'>
+          <%= raw sprintf(
+                      f.date_select(
+                        :expiration_date,
+                        class:'expiration_date',
+                        id:"expiration_date",
+                        use_month_numbers: true,
+                        prompt: "--",
+                        start_year: (Time.now.year ),
+                        end_year: (Time.now.year + 10),
+                        date_separator: '%s',
+                        ),
+                      "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+      </div>
+
+      <div class="form_text">
+        <%= f.check_box :purchase_plan, class:"purchase_plan", id:"purchase_plan" %>
+        購入予定(選択すると購入予定リストへ追加される)
+      </div>
+
+      <div class="form_text">
+        購入予定数
+      </div>
+      <%= f.text_field :purchase_plan_count, class:"purchase_plan_count", id:"purchase_plan_count", placeholder:"例:5個 1袋 など" %>
+
+      <div class="form_text">
+        URL
+      </div>
+      <%= f.text_area :url, class:"url", id:"url", placeholder:"保存しておきたいページのURL" %>
+      
+      <div class="form_text">
+        メモ
+      </div>
+      <%= f.text_field :memo, class:"memo", id:"memo", placeholder:"メモ" %>
+      
+      <div class="actions">
+        <%= f.submit"アイテム登録" %>
+      </div>
     </div>
-  </div>
-
-  <div class="weight-bold-text">
-    アイテム名
-    <span class="required">必須</span>
-  </div>
-  <%= f.text_field :item_name, class:"item_name", id:"item_name", placeholder:"アイテム名", maxlength:"10" %>
-
-  <div class="weight-bold-text">
-    ストック数
-    <span class="required">必須</span>
-  </div>
-  <%= f.text_field :stock_count, class:"stock_count", id:"stock_count", placeholder:"例:5個 1袋 など" %>
-
-  <div class="weight-bold-text">
-    保管場所
-  </div>
-  <%= f.text_field :stock_place, class:"stock_place", id:"stock_place", placeholder:"例:冷蔵庫 玄関収納 など" %>
-
-  <div class="weight-bold-text">
-    購入日or登録日
-    <span class="required">必須</span>
-  </div>
-  <%= f.collection_select(:purchase_id, Purchase.all, :id, :name, {}, {class:"purchase_select"}) %>
-
-  <div class='input_purchase_date'>
-      <%= raw sprintf(
-                  f.date_select(
-                    :purchase_date,
-                    class:'purchase_date',
-                    id:"purchase_date",
-                    use_month_numbers: true,
-                    prompt: "--",
-                    start_year: (Time.now.year - 10),
-                    end_year: (Time.now.year + 10),
-                    date_separator: '%s',
-                    selected: Date.current
-                    ),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-  </div>
-
-  <div class="weight-bold-text">
-    期限の種類
-    <span class="required">必須</span>
-  </div>
-  <%= f.collection_select(:expiration_id, Expiration.all, :id, :name, {}, {class:"expiration_select"}) %>
-
-  <div class='input_expiration_date'>
-      <%= raw sprintf(
-                  f.date_select(
-                    :expiration_date,
-                    class:'expiration_date',
-                    id:"expiration_date",
-                    use_month_numbers: true,
-                    prompt: "--",
-                    start_year: (Time.now.year ),
-                    end_year: (Time.now.year + 10),
-                    date_separator: '%s',
-                    ),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-  </div>
-
-  <div class="weight-bold-text">
-    <%= f.check_box :purchase_plan, class:"purchase_plan", id:"purchase_plan" %>
-    購入予定(選択すると購入予定リストへ追加される)
-  </div>
-
-  <div class="weight-bold-text">
-    購入予定数
-  </div>
-  <%= f.text_field :purchase_plan_count, class:"purchase_plan_count", id:"purchase_plan_count", placeholder:"例:5個 1袋 など" %>
-
-  <div class="weight-bold-text">
-    URL
-  </div>
-  <%= f.text_area :url, class:"url", id:"url", placeholder:"保存しておきたいページのURL" %>
-  
-  <div class="weight-bold-text">
-    メモ
-  </div>
-  <%= f.text_field :memo, class:"memo", id:"memo", placeholder:"メモ" %>
-  
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+  <% end %>
+</div>
