--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,9 @@
+<%= render "shared/header" %>
+
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
-<div class='form-wrap'>
-  <div class='form-header'>
-    <h1 class='form-header-text'>
+<div class='form_wrap'>
+  <div class='form_header'>
+    <h1 class='form_header_text'>
       アカウント情報入力
     </h1>
   </div>
