--- a/app/views/users/purchase_plan.html.erb
+++ b/app/views/users/purchase_plan.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/header" %>
 
 <div class="background">
-  <h1>全アイテム一覧</h1>
+  <div class="page_name">買い物予定リスト</div>
 
   <div class="items_wrap">
     <% @items.each do |item| %>
