--- a/app/assets/stylesheets/lists/index.css
+++ b/app/assets/stylesheets/lists/index.css
@@ -26,7 +26,15 @@
   border-radius: 10px;
 }
 
-.all_item_list_btn {
+.lists_btn_wrap {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+  border-bottom: 2px solid black;
+}
+
+.user_list_btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -39,6 +47,7 @@
   background-color: white;
   color: black;
   border-radius: 10px;
+  background-color: rgb(22, 227, 241);
 }
 
 .list_index_wrap {
