--- a/app/assets/stylesheets/lists/show.css
+++ b/app/assets/stylesheets/lists/show.css
@@ -62,7 +62,7 @@
   font-size: 30px;
   font-weight: 700;
   margin: 0 25px;
-  background-color: white;
+  background-color: rgb(22, 227, 241);
   color: black;
   border-radius: 10px;
 }
@@ -145,4 +145,10 @@
   color: black;
 }
 
-
+.page_name{ 
+  width: 100%;
+  text-align: center;
+  font-size: 50px;
+  font-weight: bold;
+  padding-top: 20px;
+}
