--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,51 +1,38 @@
 <%= render "shared/header" %>
 
-<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
-<div class='form_wrap'>
-  <div class='form_header'>
-    <h1 class='form_header_text'>
+<div class= "background_user_new" >
+  <%= form_with model: @user, url: user_registration_path, class: 'user_new_form', local: true do |f| %>
+    <div class='form_header'>
       アカウント情報入力
-    </h1>
-  </div>
-
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="form_group">
-    <div class="form_text_wrap">
-      <label class="form_text">ニックネーム</label>
-      <span class="required">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input_default", id:"nickname", placeholder:"例) 太郎 ", maxlength:"15", autofocus: true %>
-  </div>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="form_group">
-    <div class='form_text_wrap'>
-      <label class="form_text">メールアドレス</label>
-      <span class="required">必須</span>
+    <div class='form_wrap'>
+      <div class="form_text">ニックネーム
+        <span class="required">必須</span>
+      </div>
+      <%= f.text_area :nickname, class:"input_default", id:"nickname", placeholder:"例) 太郎 ", maxlength:"15", autofocus: true %>
+
+      <div class='form_text'>
+        メールアドレス
+        <span class="required">必須</span>
+      </div>
+      <%= f.email_field :email, class:"input_default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+
+      <div class="form_text">
+        パスワード
+        <span class="required">必須</span>
+      </div>
+      <%= f.password_field :password, class:"input_default", id:"password", placeholder:"6文字以上の半角英数字" %>
+
+      <div class="form_text">パスワード(確認)
+        <span class="required">必須</span>
+      </div>
+      <%= f.password_field :password_confirmation, class:"input_default", id:"password_confirmation", placeholder:"同じパスワードを入力して下さい" %>
+
+      <div class="register_btn">
+        <%= f.submit "アカウント登録" %>
+      </div>
     </div>
-    <%= f.email_field :email, class:"input_default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
-  </div>
-
-  <div class="form_group">
-    <div class='form_text_wrap'>
-      <label class="form_text">パスワード</label>
-      <span class="required">必須</span>
-    </div>
-    <%= f.password_field :password, class:"input_default", id:"password", placeholder:"6文字以上の半角英数字" %>
-  </div>
-
-  <div class="form_group">
-    <div class='form_text_wrap'>
-      <label class="form_text">パスワード(確認)</label>
-      <span class="required">必須</span>
-    </div>
-    <%= f.password_field :password_confirmation, class:"input_default", id:"password_confirmation", placeholder:"同じパスワードを入力して下さい" %>
-  </div>
-
-  <div class="register_btn">
-    <%= f.submit "アカウント登録" %>
-  </div>
+  <% end %>
 </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
