--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
 
-<div class= "background_user_new" >
+<div class= "background_user_page" >
   <%= form_with model: @user, url: user_registration_path, class: 'user_new_form', local: true do |f| %>
     <div class='form_header'>
       アカウント情報入力
