--- a/app/assets/stylesheets/users/user.css
+++ b/app/assets/stylesheets/users/user.css
@@ -53,8 +53,11 @@
 }
 
 .acount_delete {
+  display: flex;
+  justify-content: center;
   font-weight: bold;
   margin-top: 30px;
+  padding-top: 20px;
   font-size: 20px;
   border-top: solid 2px lightgray;
 }
@@ -69,4 +72,5 @@
 }
 
 .edit_form_wrap {
+  margin: auto;
 }
