--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,37 +8,40 @@
       アカウント編集情報入力
     </div>
     <div class='edit_form_wrap'>
-      <div class="form_text">
-        メールアドレス
+      <div class="edit_form">
+        <div class="form_text">
+          メールアドレス
+        </div>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
 
-      <div class="form_text">
-        パスワード<br>(変更しない場合は空白のままにしてください)
+      <div class="edit_form">
+        <div class="form_text">
+          パスワード<br>(変更しない場合は空白のままにしてください)
+        </div>
         <%= f.password_field :password, autocomplete: "new-password" %>
-        <% if @minimum_password_length %>
-          <br />
-          <em><%= @minimum_password_length %> 文字以上</em>
-        <% end %>
       </div>
 
-      <div class="form_text">
-        確認用パスワード<br>(パスワードを変更する場合は入力)
+      <div class="edit_form">
+        <div class="form_text">
+          確認用パスワード<br>(パスワードを変更する場合は入力)
+        </div>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
 
-
-      <div class="form_text">
-        現在のパスワード<br>(アカウント情報を変更するには入力)
+      <div class="edit_form">
+        <div class="form_text">
+          現在のパスワード<br>(アカウント情報を変更するには入力)
+        </div>
+        <%= f.password_field :current_password, autocomplete: "current-password" %>
       </div>
-      <%= f.password_field :current_password, autocomplete: "current-password" %>
 
       <div class="actions">
         <%= f.submit "アカウント情報編集" %>
       </div>
-      <div class="acount_delete">
-        <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "本当にアカウント削除しますか？", turbo_confirm: "本当にアカウント削除しますか？" }, method: :delete, class: "acount_delete_btn" %>
-      </div>
+    </div>
+    <div class="acount_delete">
+      <%= button_to "アカウント削除", registration_path(resource_name), data: { confirm: "本当にアカウント削除しますか？", turbo_confirm: "本当にアカウント削除しますか？" }, method: :delete, class: "acount_delete_btn" %>
     </div>
   <% end %>
 </div>
