--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/header" %>
 
 <div class="background_item_new">
-  <%= form_with(model: [@list, @item], class: 'item_new_form', local: true) do |f| %>
+  <%= form_with(model: [@list, @item], url: list_items_path(@list), class: 'item_new_form', local: true) do |f| %>
     <div class="form_header">
       アイテム登録
     </div>
