リストの表示不具合の修正

--- a/app/assets/stylesheets/lists/show.css
+++ b/app/assets/stylesheets/lists/show.css
@@ -30,10 +30,12 @@
 
 .list_img_show {
   border-radius: 10px;
+  max-height: 170px;
+  margin-left: 30px;
 }
 
 .list_name_show {
-  max-width: 500px;
+  max-width: 450px;
   font-size: 70px;
   text-align: center;
   white-space: nowrap;
