--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,33 +1,38 @@
 <%= render "shared/header" %>
 
-<%= form_with(model: @list, local: true) do |f| %>
-
- <div class="img-upload">
-    <div class="weight-bold-text">
-      リスト画像
+<div class="background_list_new">
+  <%= form_with(model: @list, class: 'list_new_form', local: true) do |f| %>
+  <div class="form_header">
+    リスト登録
+  </div>
+  <div class="form_wrap">
+    <div class="img-upload">
+      <div class="form_text">
+        リスト画像
+      </div>
+      <div class="click-upload">
+        <div>
+          クリックしてファイルをアップロード
+        </div>
+        <%= f.file_field :image, id:"list-image" %>
+      </div>
     </div>
-    <div class="click-upload">
-      <p>
-        クリックしてファイルをアップロード
-      </p>
-      <%= f.file_field :image, id:"list-image" %>
+
+      <div class="form_text">
+        リスト名
+        <span class="required">必須</span>
+      </div>
+      <%= f.text_area :list_name, class:"list_name", id:"list_name", placeholder:"リスト名（10文字まで)", maxlength:"10" %>
+      <div class="form_text">
+        パスワード
+        <span class="required">必須</span>
+      </div>
+      <%= f.password_field :list_password, class:"list_password", id:"list_password", placeholder:"4文字の半角数字" %>
+
+      <div class="actions">
+        <%= f.submit"リスト登録" %>
+      </div>
     </div>
-  </div>
+  <% end %>
 
-  <div class="weight-bold-text">
-    リスト名
-    <span class="required">必須</span>
-    リスト例：食料品、日用品、子供用品、知識関係(心臓マッサージ、喉に詰まらせた、熱痙攣)など
-  </div>
-  <%= f.text_area :list_name, class:"list_name", id:"list_name", placeholder:"リスト名（10文字まで)", maxlength:"10" %>
-  
-  <div class="weight-bold-text">
-    パスワード
-    <span class="required">必須</span>
-  </div>
-  <%= f.password_field :list_password, class:"list_password", id:"list_password", placeholder:"4文字の半角数字" %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
