アイテム詳細画面へのリンク設定

--- a/app/assets/stylesheets/lists/show.css
+++ b/app/assets/stylesheets/lists/show.css
@@ -91,6 +91,11 @@
   align-items: center;
 }
 
+.item_link {
+  text-decoration: none;
+  color: black;
+}
+
 .item {
   width: calc((100% - 400px) / 2);
   height: 220px;
