間違い修正

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -54,7 +54,7 @@
                 ストック数:
                 <%= item.stock_count %>
               </div>
-              <% if item.memo.present? %>
+              <% if item.stock_place.present? %>
                 <div class="stock_place_info">
                   保管場所:
                   <%= item.stock_place %>
