--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -15,10 +15,14 @@
           <div class='list_name_show'>
             <%= @list.list_name %>
           </div>
-          <p class="item_count">
-            登録アイテム数
+          <div class="item_count">
+            登録アイテム数:
             <%= @items.count %>
-          </p>
+          </div>
+          <div class="list_id">
+            リストID:
+            <%= @list.id %>
+          </div>
         </div>
       </div>
     </div>
