--- a/app/assets/stylesheets/lists/index.css
+++ b/app/assets/stylesheets/lists/index.css
@@ -11,16 +11,32 @@
   flex-direction: column;
 }
 
-.list_new_btn {
+.list_new_join_btn_wrap {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 30px 0 ;
+}
+
+.list_new_join_btn {
+  text-align: center;
   height: 50px;
   width: 200px;
   text-decoration: none;
   font-size: 30px;
   font-weight: 700;
-  margin: 30px 0;
+  background-color: red;
+  color: yellow;
+  border-radius: 10px;
+  margin: 0 25px;
+}
+
+.list_join_btn {
+  text-align: center;
+  height: 50px;
+  width: 200px;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 700;
+  margin: 0 0 30px 0;
   background-color: red;
   color: yellow;
   border-radius: 10px;
