--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,7 +3,10 @@
 <% if user_signed_in? %>
   <div class="background">
     <div class= "top_page">
-      <%= link_to "リスト登録", new_list_path, class: "list_new_btn" %>
+      <div class="list_new_join_btn_wrap">
+        <%= link_to "リスト登録", new_list_path, class: "list_new_join_btn" %>
+        <%= link_to "リスト参加", "#", class: "list_new_join_btn" %>
+      </div>
       <div class="lists_btn_wrap">
         <%= link_to "全アイテム一覧", all_items_user_path(current_user), class: "user_list_btn" %>
         <%= link_to "買い物予定リスト", purchase_plan_user_path(current_user), class: "user_list_btn" %>
