アイテムページエラー表示

--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -5,6 +5,9 @@
     <div class="form_header">
       アイテム編集
     </div>
+
+    <%= render 'shared/error_messages', model: f.object %>
+
     <div class="form_wrap">
       <div class="img_upload">
         <div class="form_text">
