--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,6 +5,9 @@
     <div class="form_header">
       アイテム登録
     </div>
+    
+    <%= render 'shared/error_messages', model: f.object %>
+
     <div class="form_wrap">
       <div class="img_upload">
         <div class="form_text">
