--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -5,6 +5,9 @@
     <div class="form_header">
       リスト登録
     </div>
+
+    <%= render 'shared/error_messages', model: f.object %>
+
     <div class="list_new_form_wrap">
       <div class="img-upload">
         <div class="form_text">
