--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,7 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'user_edit_form' }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class='form_header'>
-      アカウント編集情報入力
+      アカウント情報編集
     </div>
     <div class='edit_form_wrap'>
       <div class="edit_form">
